[package]
name = "seek"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.198", features = ["derive"], optional = true }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tqdm = "0.7.0"
walkdir = "2.5.0"

[features]
serde = ["dep:serde"]
