[package]
name = "seek"
version = "1.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
clipboard = "0.5.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.42.0", features = ["full"] }
walkdir = "2.5.0"
